--- a/src/components/page-services/section-process/section-process.module.css
+++ b/src/components/page-services/section-process/section-process.module.css
@@ -198,6 +198,11 @@
     font-size: var(--font-size-h4);
   }
 
+  .icon {
+    width: 32px;
+    height: 32px;
+  }
+
   .description {
     font-size: var(--font-size-body-sm);
   }
