--- a/src/components/page-services/section-why-us/section-why-us.module.css
+++ b/src/components/page-services/section-why-us/section-why-us.module.css
@@ -187,6 +187,11 @@
     padding: 0.875rem 2rem;
   }
 
+  .icon {
+    width: 32px;
+    height: 32px;
+  }
+
   .reasonItem {
     margin-bottom: 3rem;
   }
