--- a/src/components/pages/careers/sections/section-what-you-get.module.css
+++ b/src/components/pages/careers/sections/section-what-you-get.module.css
@@ -101,8 +101,8 @@
   }
 
   .iconWrapper {
-    width: 48px;
-    height: 48px;
+    width: 24px;
+    height: 24px;
   }
 
   .benefitTitle {
