--- a/src/components/pages/contact/sections/section-contact-hero.module.css
+++ b/src/components/pages/contact/sections/section-contact-hero.module.css
@@ -245,8 +245,8 @@ a.infoValue:hover {
   }
 
   .iconWrapper {
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
   }
 
   .infoValue {
