--- a/src/components/pages/services/service-page-layout.module.css
+++ b/src/components/pages/services/service-page-layout.module.css
@@ -738,6 +738,16 @@
     font-size: 14px;
   }
 
+  .proofReasonIcon {
+    width: 32px;
+    height: 32px;
+  }
+
+  .proofReasonIcon svg {
+    width: 32px;
+    height: 32px;
+  }
+
   .proofReasonItem {
     margin-bottom: 3rem;
   }
